# sandbox

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Makefile  NOTICE  README.md  build.sh  cli.py  go.work  go.work.sum  labs.yml  manifest (1).mf  pyproject.toml
databricks-agents/: CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  FRAMEWORK_OVERVIEW.md  PROJECT.md  README.md  SANDBOX_SUBMISSION.md  manifest.yaml  mkdocs.yml  pyproject.toml
databricks-agents/.github/workflows/: publish.yml  test.yml
databricks-agents/app/backend/: init_warehouse_schema.sql
databricks-agents/docs/: contributing.md  index.md
databricks-agents/docs/api/: a2a-client.md  agent-app.md  discovery.md  uc-registry.md
databricks-agents/docs/examples/: customer-research.md  multi-agent.md  uc-integration.md
databricks-agents/docs/getting-started/: first-agent.md  installation.md  quickstart.md
databricks-agents/docs/guide/: a2a-protocol.md  agent-app.md  discovery.md  tools.md  unity-catalog.md
databricks-agents/examples/: communicate_with_agent.py  customer_research_agent.py  discover_agents.py  full_featured_agent.py  hello_agent.py
databricks-agents/examples/data-tools/: app.py
databricks-agents/examples/hello-world/: app.py
databricks-agents/examples/research-agent/: agent.py  app.py  app.yaml  requirements.txt
databricks-agents/examples/supervisor/: agent.py  agents.yaml  app.py  app.yaml
databricks-agents/src/databricks_agents/: __init__.py  cli.py
databricks-agents/tests/: conftest.py  test_a2a_client.py  test_agent_app.py  test_agent_discovery.py  test_app_agent.py  test_dashboard.py  test_dashboard_invocations.py  test_deploy_config.py  test_deploy_engine.py  test_eval_bridge.py  test_mcp_server.py  test_system_builder.py  test_types.py  test_uc_functions.py  test_uc_registry.py
dbfs-scanner/: README.md  pyproject.toml  scan_compute.py  scan_compute_nb.ipynb  scan_dbfs.py  scan_dbfs_nb.ipynb
dbfs-scanner/helpers/: compute_analyzer.py  dbfs_analyzer.py
dbx-agent-app/: .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  FRAMEWORK_OVERVIEW.md  LICENSE  README.md  manifest.yaml  mkdocs.yml  pyproject.toml
dbx-agent-app/.github/workflows/: docs.yml  test.yml
dbx-agent-app/app/backend/: .databricksignore  .gitignore  README.md  alembic.ini  app.yaml  pytest.ini  requirements.txt
dbx-agent-app/app/webapp/: .dockerignore  .gitignore  Dockerfile  README.md  app.yaml  index.html  nginx.conf  package-lock.json  package.json  server.js  tsconfig.json  vite.config.ts
dbx-agent-app/docs/: contributing.md
dbx-agent-app/docs/api/: a2a-client.md  discovery.md  uc-registry.md
dbx-agent-app/docs/examples/: customer-research.md  multi-agent.md
dbx-agent-app/docs/getting-started/: first-agent.md  installation.md  quickstart.md
dbx-agent-app/docs/guide/: tools.md  unity-catalog.md
dbx-agent-app/examples/: communicate_with_agent.py  customer_research_agent.py  discover_agents.py  full_featured_agent.py  hello_agent.py
dbx-agent-app/examples/account-lookup/: app.py  app.yaml
dbx-agent-app/examples/campaign-insights/: app.py
dbx-agent-app/examples/campaign-supervisor/: app.py  app.yaml
dbx-agent-app/examples/data-tools/: app.py  app.yaml
dbx-agent-app/examples/hello-world/: app.py
dbx-agent-app/examples/research-agent/: agent.py  app.yaml  requirements.txt
dbx-agent-app/examples/supervisor/: .agents-deploy.json  agent.py  agents.yaml  app.py  requirements.txt  setup_tables.py
dbx-agent-app/src/dbx_agent_app/: __init__.py  cli.py
dbx-agent-app/tests/: conftest.py  test_a2a_client.py  test_agent_app.py  test_agent_discovery.py  test_analytics.py  test_app_agent.py  test_dashboard.py  test_deploy_config.py  test_deploy_engine.py  test_eval_bridge.py  test_mcp_server.py  test_scorers.py  test_system_builder.py  test_tracing.py  test_types.py
judge-builder/: .gitignore  CHANGELOG.md  README-DEV.md  README.md  SECURITY.md  app.yaml  deploy.sh  manifest.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.sh
judge-builder/client/: index.html  openapi.json  package.json  tsconfig.json  vite.config.ts
judge-builder/client/src/: App.tsx  main.tsx
judge-builder/dev/: fix.sh  watch.sh
judge-builder/docs/: design.md  product.md
judge-builder/docs/databricks_apis/: README.md  databricks_sdk.md  mlflow_genai.md  model_serving.md  workspace_apis.md
judge-builder/scripts/: generate_semver_requirements.py  make_fastapi_client.py  test.py
judge-builder/server/: __init__.py  app.py  make_openapi.py  models.py  prompts.py
judge-builder/server/judges/: __init__.py  base_judge.py  custom_simba_optimizer.py  instruction_judge.py
judge-builder/server/routers/: __init__.py  alignment.py  cache.py  experiments.py  judge_builders.py  judges.py  labeling.py  serving_endpoints.py  users.py
judge-builder/server/services/: alignment_service.py  base_service.py  cache_service.py  experiment_service.py  judge_builder_service.py  judge_service.py  labeling_service.py  serving_endpoint_service.py  user_service.py
judge-builder/server/utils/: __init__.py  constants.py  dspy_utils.py  naming_utils.py  parsing_utils.py  schema_analysis.py
judge-builder/tests/: __init__.py  test_judge_response_schema.py  test_models.py
judge-builder/tests/judges/: __init__.py  test_instruction_judge.py
judge-builder/tests/services/: __init__.py  test_alignment_service.py  test_cache_service.py  test_experiment_service.py  test_judge_builder_service.py  test_judge_service.py  test_labeling_service.py
judge-builder/tests/utils/: __init__.py  test_naming_utils.py  test_parsing_utils.py  test_schema_analysis.py
marketplace-provisioning/: .gitignore  README.md  SECURITY.md  app.py  app.yaml  databricks.yml  manifest.yaml  provisioner.py  pyproject.toml  requirements.txt
marketplace-provisioning/frontend/: index.html  package-lock.json  package.json  vite.config.ts
marketplace-provisioning/scenarios/: registry.py
marketplace-provisioning/static/: index.html
repl/: README.md  pyproject.toml
repl/examples/: pyspark.py  python.py  rlang.r  uc-sql.sql
(+1919 files in other folders)
