[project]
name = "databricks-labs-sandbox"
version = "0.0.1"
description = "Experimental and low-maturity scripts"
authors = [
    {name = "Databricks Labs"},
]
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk==0.40.0",
    "pyyaml~=6.0.2",
    "mlflow[databricks]~=2.16.0",
    "databricks-labs-blueprint==0.12.0",
    "databricks-labs-lsql==0.14.1",
]

[build-system]
requires = [
    "hatchling~=1.29.0",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "ip_access_list_analyzer",
    "sql_migration_assistant",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
]
lint = [
    "ruff~=0.11.0",
]
test = [
    "pytest~=8.3.0",
    "pytest-cov~=6.0.0",
]
yq = [
    "yq~=3.4.3",
]

[tool.uv]
required-version = "~=0.11.0"
