[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-agents"
version = "0.1.0"
description = "Framework for building discoverable agents on Databricks Apps"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Databricks Labs", email = "labs@databricks.com"}
]
keywords = ["databricks", "agents", "ai", "mcp", "a2a"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "databricks-sdk>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/databricks-labs/databricks-agents"
Documentation = "https://databricks-labs.github.io/databricks-agents"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
