[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbx-agent-app"
version = "0.3.0"
description = "Agent platform for Databricks: discover, test, trace, and govern agents in your workspace"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Databricks Labs", email = "labs@databricks.com"}
]
keywords = ["databricks", "agents", "ai", "mcp", "a2a"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "databricks-sdk>=0.30.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mlflow = [
    "mlflow>=2.15.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.8.0",
]

[project.scripts]
dbx-agent-app = "dbx_agent_app.cli:main"

[project.urls]
Homepage = "https://github.com/databricks-labs/dbx-agent-app"
Documentation = "https://databricks-labs.github.io/dbx-agent-app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dbx_agent_app.dashboard" = ["static/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
